change app name to crosswars-backend
